--- a/app/components/About/about.css
+++ b/app/components/About/about.css
@@ -2,8 +2,6 @@
     width: 100%;
     height: auto;
 
-    padding: 120px 0;
-
     display: flex;
     flex-direction: column;
 
@@ -12,6 +10,7 @@
         height: auto;
 
         margin: 0 auto;
+        padding: 120px 0;
 
         display: flex;
         gap: 1em;
@@ -38,11 +37,11 @@
                 color: #7D8081;
             }
 
-            & > * {
+            &>* {
                 transition: color 500ms ease;
             }
 
-            & > h2 {
+            &>h2 {
                 color: #232728;
 
                 margin-bottom: 10px;
@@ -52,12 +51,12 @@
                 text-transform: uppercase;
             }
 
-            & > p {
+            &>p {
                 color: #7D8081;
 
                 font-size: .95em;
                 line-height: 156%;
-                
+
             }
 
             &:hover {
@@ -65,7 +64,7 @@
                     height: 100%;
                 }
 
-                & > * {
+                &>* {
                     color: #fff;
                 }
             }
@@ -89,5 +88,291 @@
                 z-index: -1;
             }
         }
+    }
+
+    .about-wrapper {
+        width: 100%;
+        height: 120vh;
+
+        .about-section {
+            width: 90%;
+            height: 100%;
+
+            display: flex;
+
+            margin: 0 auto;
+
+            .about-image {
+                width: 50%;
+                height: 100%;
+
+                background-image: url('../../../public/about-image-left.jpg');
+                background-repeat: no-repeat;
+                background-size: 70%;
+                background-position: left;
+
+                position: relative;
+
+                &::after {
+                    content: '';
+
+                    display: block;
+
+                    width: 30px;
+                    height: 450px;
+
+                    background-image: linear-gradient(to bottom, #CA4445, transparent);
+
+                    position: absolute;
+                    top: 30px;
+                    right: 120px;
+
+                    animation: bounce 4s ease-in-out infinite;
+                }
+
+                .about-second-image {
+                    width: 272px;
+                    height: 255px;
+
+                    display: block;
+
+                    position: absolute;
+                    top: 70%;
+                    right: 20%;
+
+                    background-image: url('../../../public/about-second-image.jpg');
+                    background-size: cover;
+                    background-position: center;
+                }
+
+                & img {
+                    position: absolute;
+                    top: 70%;
+                    left: -50px;
+
+                    animation: topBottom 4s ease-in-out infinite;
+                }
+            }
+
+            .about-content {
+                width: 50%;
+                height: 100%;
+
+                .about-content-top {
+                    width: 100%;
+
+                    margin: 30px 0;
+
+                    display: flex;
+                    flex-direction: column;
+
+
+                    &>h6 {
+                        font-size: 14px;
+                        text-transform: uppercase;
+
+                        color: #7D8081;
+
+                        &>img {
+                            margin-right: 7px;
+                        }
+                    }
+
+                    &>h3 {
+                        margin-top: 7px;
+                        margin-bottom: 20px;
+
+                        font-size: 40px;
+                        text-wrap: balance;
+
+                        text-transform: uppercase;
+
+                        line-height: 125%;
+
+                        color: #232728;
+                    }
+
+
+                    &>p {
+                        font-size: 1em;
+                        font-weight: 600;
+
+
+                        line-height: 188%;
+
+                        color: #7D8081;
+                    }
+                }
+
+                .about-feature {
+                    width: 100%;
+
+                    padding-bottom: 30px;
+
+                    display: flex;
+
+                    border-bottom: 1px solid #EFE6E1;
+
+
+                    .about-feature-item {
+                        width: 100%;
+
+                        display: flex;
+                        align-items: center;
+                        gap: 22px;
+
+                        .about-feature-icon {
+                            width: 70px;
+                            height: 70px;
+
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+
+                            border-radius: 50%;
+
+                            background: #EFE6E1;
+
+                            &>svg {
+                                font-size: 40px;
+
+                                transition: color 500ms ease-in-out;
+
+                                &:hover {
+                                    color: #CA4445;
+                                }
+                            }
+
+
+                        }
+
+                        .about-feature-title {
+                            font-weight: 700;
+                            font-size: 1em;
+                            line-height: 150%;
+                            text-transform: uppercase;
+
+                            color: #232728;
+                        }
+                    }
+                }
+
+                .about-list-wrapper {
+                    width: 100%;
+
+                    display: flex;
+
+                    .about-list {
+                        width: 50%;
+
+                        display: flex;
+                        flex-direction: column;
+
+                        & > ul {
+                            width: 100%;
+
+                            display: flex;
+                            flex-direction: column;
+
+                            list-style: none;
+
+                            & > li {
+                                margin-top: 18px;
+                                margin-right: -10px;
+    
+                                font-size: 1em;
+                                font-weight: 500;
+                                line-height: 19px;
+    
+                                list-style: none;
+
+                                color: #7D8081;
+                            }
+                        }
+
+
+                        & button {
+                            margin-top: 47px;
+                            padding: 25px 40px;
+
+                            border: 0;
+
+                            text-transform: uppercase;
+
+                            font-size: 1.1em;
+                            font-weight: 700;
+
+                            background: #232728;
+                            color: #fff;
+
+                            cursor: pointer;
+
+                            position: relative;
+
+                            z-index: 10;
+
+                            transition: color 500ms ease;
+
+                            &::after {
+                                content: '';
+
+                                width: 100%;
+                                height: 0%;
+
+                                display: block;
+
+                                background: #CA4445;
+
+                                position: absolute;
+                                top: 0;
+                                left: 0;
+
+                                transition: height 500ms ease;
+
+                                z-index: -1;
+                            }
+
+                            &:hover {
+                                color: #fff;
+
+                                &::after {
+                                    height: 100%;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+
+    }
+}
+
+@keyframes bounce {
+    0% {
+        top: 30px;
+    }
+
+    50% {
+        top: 100px;
+    }
+
+    100% {
+        top: 30px;
+    }
+}
+
+@keyframes topBottom {
+    0% {
+        transform: translateY(-10px);
+    }
+
+    60% {
+        transform: translateY(0px);
+    }
+
+    100% {
+        transform: translateY(-10px);
     }
 }
