--- a/app/components/About/about.css
+++ b/app/components/About/about.css
@@ -92,11 +92,11 @@
 
     .about-wrapper {
         width: 100%;
-        height: 120vh;
+        height: 100%;
 
         .about-section {
             width: 90%;
-            height: 100%;
+            height: 120vh;
 
             display: flex;
 
@@ -395,6 +395,10 @@
 }
 
 @media (width <=1024px) {
+
+    .about-section {
+        height: auto !important;
+    }
 
     .about-image {
         margin-right: 50px !important;
