--- a/app/components/Services/services.css
+++ b/app/components/Services/services.css
@@ -2,11 +2,13 @@
     display: flex;
     flex-direction: column;
 
+    margin-bottom: 115px;
+
     .services-card {
-        width: 1200px; 
+        width: 100%; 
         height: 100vh;
 
-        margin: 115px auto 120px auto;
+        margin: 115px 0 0 0;
         padding: 115px 85px 120px 100px;
 
         display: flex;
@@ -15,37 +17,13 @@
         position: relative;
 
 
-        background-color: #CA4445;
+        background-color: #232728;
 
         z-index: 100;
 
-        .services-image {
-            width: 370px;
-            height: 380px;
-
-            background-image: url('../../../public/services-1.png');
-            background-repeat: no-repeat;
-            background-size: fill;
-            background-position: center;
-
-            position: absolute;
-            left: 50%;
-
-            transition: rotate 500ms ease-in-out;
-        }
-
-        &:nth-child(2) .service-content {
-            margin-left: auto;
-        }
-
-        &:nth-child(2) .services-image {
-            left: 20%;
-
-            background-image: url('../../../public/services-2.png');
-        }
-
+        
         .service-content {
-            width: 600px;
+            width: 800px;
             height: 500px;
 
             display: flex;
@@ -57,7 +35,7 @@
             transition: all 500ms ease-in-out;
 
             &:hover {
-                background: #232728;
+                background: #CA4445;
             }
 
             &:hover p {
@@ -68,13 +46,17 @@
                 rotate: 5deg;
             }
 
+            &:hover + .services-image:nth-child(2) {
+                rotate: -5deg;
+            }
+
             & > p {
                 width: 60%;
 
 
                 color: #232728;
     
-                font-size: 20px;
+                font-size: 25px;
                 font-weight: 700;
                 text-transform: uppercase;
                 line-height: 135%;
@@ -82,6 +64,36 @@
                 transition: all 500ms ease-in-out;
             }
         }
+
+        .services-image {
+            width: 370px;
+            height: 380px;
+
+            background-image: url('../../../public/services-1.png');
+            background-repeat: no-repeat;
+            background-size: fill;
+            background-position: center;
+
+            position: absolute;
+            left: 60%;
+
+            transition: rotate 500ms ease-in-out;
+        }
+
+        &:nth-child(2) {
+            margin-top: 0;
+        }
+
+        &:nth-child(2) .service-content {
+            margin-left: auto;
+        }
+
+        &:nth-child(2) .services-image {
+            left: 15%;
+
+            background-image: url('../../../public/services-2.png');
+        }
+
     }
 
 }
