--- a/app/components/Services/services.css
+++ b/app/components/Services/services.css
@@ -136,6 +136,8 @@
 
 @media (width <= 767px) {
     .services-container {
+        margin-bottom: 0 !important;
+        
         .services-card {
             padding: 0 !important;
 
