--- a/app/components/Services/services.css
+++ b/app/components/Services/services.css
@@ -1,104 +1,75 @@
 .services-container {
     display: flex;
-    flex-direction: column;
 
-    background-color: #232728;
-
-    .services-card {
-        width: 100%; 
+    .services-left {
+        width: 50%;
         height: 100vh;
 
-        margin: 115px 0 0 0;
-        padding: 115px 85px 120px 100px;
+        background-image: url('../../../public/services-bg-left.png');
+        background-repeat: no-repeat;
+        background-position: top left;
+        background-attachment: fixed;
+    }
+
+    .services-card-right {
+        width: 50%;
+        height: 100vh;
+
+        padding: 30px 15px;
 
         display: flex;
-        align-items: center;
+        justify-content: center;
+        gap: 10px;
 
-        position: relative;
+        .services-card {
+            width: 300px;
+            height: 320px;
 
-        z-index: 100;
+            background: #232728;
 
-        
-        .service-content {
-            width: 800px;
-            height: 500px;
+            .service-content {
+                padding: 15px 30px;
 
-            display: flex;
-            justify-content: center;
-            align-items: center;
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-start;
 
-            background-color: #fff;
+                &>span {
+                    width: 50px;
+                    height: 50px;
 
-            transition: all 500ms ease-in-out;
+                    margin-bottom: 20px;
 
-            &:hover {
-                background: #CA4445;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    background-color: #CA4445;
+
+                    &>svg {
+                        color: #fff;
+
+                        font-size: 40px;
+                    }
+                }
+
+
             }
 
-            &:hover p {
-                color: #fff;
-            }
-
-            &:hover + .services-image {
-                rotate: 5deg;
-            }
-
-            &:hover + .services-image:nth-child(2) {
-                rotate: -5deg;
-            }
-
-            & > p {
-                width: 60%;
-
-
-                color: #232728;
-    
-                font-size: 25px;
-                font-weight: 700;
-                text-transform: uppercase;
-                line-height: 135%;
-                
-                transition: all 500ms ease-in-out;
-            }
         }
 
-        .services-image {
-            width: 370px;
-            height: 380px;
-
-            background-image: url('../../../public/services-1.png');
-            background-repeat: no-repeat;
-            background-size: fill;
-            background-position: center;
-
-            position: absolute;
-            left: 60%;
-
-            transition: rotate 500ms ease-in-out;
-        }
-
-        &:nth-child(2) {
-            margin-top: 0;
-        }
-
-        &:nth-child(2) .service-content {
-            margin-left: auto;
-        }
-
-        &:nth-child(2) .services-image {
-            left: 15%;
-
-            background-image: url('../../../public/services-2.png');
+        .services-card:nth-child(2) {
+            align-self: flex-end;
         }
 
     }
-
 }
 
-@media (width <= 1024px) {
+
+@media (width <=1024px) {
     .services-container {
         margin-top: 120px;
-        
+
 
         .services-card {
             margin: 0 !important;
@@ -115,11 +86,11 @@
             .service-content {
                 width: 600px !important;
 
-                & > p {
+                &>p {
                     font-size: 20px !important
                 }
             }
-            
+
             .services-image {
                 top: 22%;
             }
@@ -132,7 +103,7 @@
     }
 }
 
-@media (width <= 767px) {
+@media (width <=767px) {
     .services-container {
         margin-bottom: 0 !important;
 
@@ -144,7 +115,7 @@
             .service-content {
                 height: 100% !important;
 
-                & > p {
+                &>p {
                     margin-top: 15em !important;
                     padding-bottom: 50px !important;
 
@@ -154,23 +125,23 @@
                     font-variant-caps: all-small-caps;
                 }
             }
-    
+
             .services-image {
                 width: 250px !important;
                 height: 300px !important;
-    
+
                 top: 32px !important;
                 left: 60px !important;
             }
 
             &:nth-child(2) {
                 .service-content {
-                    & > p {
+                    &>p {
                         margin-top: 11em !important;
                     }
                 }
             }
         }
     }
-    
+
 }
