--- a/app/components/Hero/hero.css
+++ b/app/components/Hero/hero.css
@@ -395,6 +395,8 @@
         & > button {
             margin-left: 1.5em !important;
             padding: 20px 30px !important;
+
+            color: #fff !important;
         }
     }
 }
