--- a/app/components/CTA/cta.css
+++ b/app/components/CTA/cta.css
@@ -124,6 +124,8 @@
             
             & > button {
                 font-size: 1em !important;
+
+                color: #fff !important;
             }
         }
     }
