Arrumando as cores dos botões

--- a/app/components/CTA/cta.css
+++ b/app/components/CTA/cta.css
@@ -125,7 +125,11 @@
             & > button {
                 font-size: 1em !important;
 
-                color: #fff !important;
+                color: #1b090990 !important;
+
+                &:hover {
+                    color: #fff;
+                }
             }
         }
     }
