--- a/app/components/Hero/hero.css
+++ b/app/components/Hero/hero.css
@@ -396,7 +396,7 @@
             margin-left: 1.5em !important;
             padding: 20px 30px !important;
 
-            color: #000 !important;
+            color: #1b090990 !important;
 
             &:hover {
                 color: #fff;
