Alteração das cores de texto dos botões

--- a/app/components/CTA/cta.css
+++ b/app/components/CTA/cta.css
@@ -125,7 +125,7 @@
             & > button {
                 font-size: 1em !important;
 
-                color: #1b090990 !important;
+                color: #232728 !important;
 
                 &:hover {
                     color: #fff;
