--- a/app/components/Hero/hero.css
+++ b/app/components/Hero/hero.css
@@ -399,7 +399,7 @@
             color: #232728 !important;
 
             &:hover {
-                color: #fff;
+                color: #fff !important;
             }
         }
     }
