--- a/app/components/CTA/cta.css
+++ b/app/components/CTA/cta.css
@@ -128,7 +128,7 @@
                 color: #232728 !important;
 
                 &:hover {
-                    color: #fff;
+                    color: #fff !important;
                 }
             }
         }
