--- a/app/components/Hero/hero.css
+++ b/app/components/Hero/hero.css
@@ -86,6 +86,11 @@
 
                         transition: opacity 500ms ease;
                     }
+
+                    & > a {
+                        text-decoration: none;
+                        color: #fff;
+                    }
                 }
             }
         }
