--- a/app/components/Services/services.css
+++ b/app/components/Services/services.css
@@ -81,6 +81,15 @@
     }
 }
 
+@media (width <= 3440px) {
+    .services-card-right  {
+        padding-top: 200px !important;
+        
+        justify-content: flex-start !important;
+        gap: 100px !important;
+    }
+}
+
 @media (width <= 1024px) {
     .services-left {
         background-position: top;
