Alterações de media queries

--- a/app/components/About/about.css
+++ b/app/components/About/about.css
@@ -394,7 +394,7 @@
     }
 }
 
-@media (width <= 3440px) {
+@media (width >= 3440px) {
     .about-cards-wrapper{
         max-width: 1200px !important;
         
