--- a/app/components/Footer/footer.css
+++ b/app/components/Footer/footer.css
@@ -126,6 +126,19 @@
                     }
                 }
             }
+
+            &:nth-child(3) {
+                & span > a {
+                    text-decoration: none;
+                    color: #232728;
+
+                    transition: color 500ms ease-in-out;
+
+                    &:hover {
+                        color: #CA4445;
+                    }
+                }
+            }
         }
     }
 
