--- a/app/components/About/about.css
+++ b/app/components/About/about.css
@@ -1,6 +1,8 @@
 .about-container {
-    width: 100%;
+    max-width: 1200px;
     height: auto;
+
+    margin: 0 auto;
 
     display: flex;
     flex-direction: column;
