--- a/app/components/CTA/cta.css
+++ b/app/components/CTA/cta.css
@@ -5,7 +5,7 @@
     background-image: url("../../../public/cta-background.png");
 
     .cta-content {
-        width: 1200px;
+        max-width: 1200px;
 
         margin: 0 auto;
 
