--- a/app/components/Footer/footer.css
+++ b/app/components/Footer/footer.css
@@ -65,13 +65,23 @@
 
             &>ul {
                 list-style: none;
+                
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-start;
+                gap: 10px;
+
 
                 &>li {
+                    width: 70%;
+
                     display: flex;
                     align-items: center;
                     gap: 10px;
 
-                    color: #232728;
+                    
+
+                    text-wrap: balance;
 
                     transition: color 500ms ease-in-out;
 
@@ -84,6 +94,12 @@
                     }
 
                     &:hover span>svg {
+                        color: #232728;
+                    }
+
+                    & > a {
+                        text-decoration: none;
+
                         color: #232728;
                     }
 
