--- a/app/components/Hero/hero.css
+++ b/app/components/Hero/hero.css
@@ -103,6 +103,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: flex-start;
+            gap: 5px;
 
             background-color: #fff;
 
@@ -114,6 +115,12 @@
                 color: #CA4445;
                 text-transform: uppercase;
                 font-weight: 500;
+
+                & > a {
+                    text-decoration: none;
+
+                    color: #CA4445;
+                }
             }
 
         }
@@ -210,7 +217,7 @@
 
                 z-index: 10;
 
-                transition: color 500ms ease;
+                
 
                 &::after {
                     content: '';
@@ -237,6 +244,17 @@
                     &::after {
                         height: 100%;
                     }
+                }
+
+                & > a {
+                    text-decoration: none;
+                    transition: color 500ms ease;
+
+                    color: #232728;
+                }
+
+                &:hover > a {
+                    color: #FFF;
                 }
 
             }
