Adição dos links para contato via WhatsApp

--- a/app/components/About/about.css
+++ b/app/components/About/about.css
@@ -358,6 +358,14 @@
                                     height: 100%;
                                 }
                             }
+
+                            & > a {
+                                padding: 2em;
+            
+                                text-decoration: none;
+            
+                                color: #fff;
+                            }
                         }
                     }
                 }
