--- a/app/components/Hero/hero.css
+++ b/app/components/Hero/hero.css
@@ -247,6 +247,8 @@
                 }
 
                 & > a {
+                    padding: 2em;
+
                     text-decoration: none;
                     transition: color 500ms ease;
 
