--- a/app/components/Hero/hero.css
+++ b/app/components/Hero/hero.css
@@ -434,6 +434,11 @@
             &:hover {
                 color: #fff !important;
             }
+
+            & > a {
+                padding: 0 !important;
+                padding-inline: 10px !important;
+            }
         }
     }
 }
